data/Java/08-bad-invocation/2/[M]Error.txt
https://stackoverflow.com/questions/25706216/what-does-a-cannot-find-symbol-compilation-error-mean
Test.java:13: error: cannot find symbol
        System.out.println(il.length);
                             ^